Fixed all of the search bar bugs. Added more functionality to the reschedule button (still might be broken).

--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fO-NY-Egl">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fO-NY-Egl">
                                 <rect key="frame" x="20" y="118" width="280" height="30"/>
                                 <state key="normal" title="Request Meal">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -29,7 +29,7 @@
                                     <action selector="requestButtonPressed:" destination="CRN-cS-KFk" eventType="touchUpInside" id="ZnL-k8-Dqk"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5uj-Mj-u4M">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5uj-Mj-u4M">
                                 <rect key="frame" x="308" y="118" width="272" height="30"/>
                                 <state key="normal" title="Pending Meals">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -129,10 +129,10 @@
                             <constraint firstItem="xB9-88-g04" firstAttribute="top" secondItem="4fO-NY-Egl" secondAttribute="bottom" id="X21-0j-Lga"/>
                             <constraint firstItem="4fO-NY-Egl" firstAttribute="leading" secondItem="5kd-oO-bq5" secondAttribute="leadingMargin" id="XkK-p8-d9M"/>
                             <constraint firstAttribute="bottom" secondItem="xB9-88-g04" secondAttribute="bottom" constant="49" id="Zny-1A-jaq"/>
-                            <constraint firstItem="5uj-Mj-u4M" firstAttribute="leading" secondItem="4fO-NY-Egl" secondAttribute="trailing" constant="5" id="ah7-ZV-9Ae"/>
+                            <constraint firstItem="5uj-Mj-u4M" firstAttribute="leading" secondItem="4fO-NY-Egl" secondAttribute="trailing" constant="8" id="ah7-ZV-9Ae"/>
                             <constraint firstItem="MKg-kJ-QF3" firstAttribute="leading" secondItem="4fO-NY-Egl" secondAttribute="leading" id="gsF-ai-m2S"/>
                             <constraint firstItem="4fO-NY-Egl" firstAttribute="top" secondItem="MKg-kJ-QF3" secondAttribute="bottom" id="h7x-dV-sJZ"/>
-                            <constraint firstItem="5uj-Mj-u4M" firstAttribute="width" secondItem="4fO-NY-Egl" secondAttribute="width" id="hSE-0t-Khi"/>
+                            <constraint firstItem="5uj-Mj-u4M" firstAttribute="width" secondItem="4fO-NY-Egl" secondAttribute="width" constant="-8" id="hSE-0t-Khi"/>
                             <constraint firstItem="5uj-Mj-u4M" firstAttribute="top" secondItem="MKg-kJ-QF3" secondAttribute="bottom" id="hYb-UD-ksr"/>
                             <constraint firstItem="MKg-kJ-QF3" firstAttribute="top" secondItem="5kd-oO-bq5" secondAttribute="top" constant="8" id="iN9-yK-zOq"/>
                             <constraint firstItem="5uj-Mj-u4M" firstAttribute="height" secondItem="4fO-NY-Egl" secondAttribute="height" id="kxh-s4-aPu"/>
@@ -414,8 +414,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WZA-Vb-Bef" customClass="I">
+                                <rect key="frame" x="0.0" y="64" width="600" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="481252159.44744402">
+                                    <!--2016-04-02 01:09:19 +0000-->
+                                </date>
+                            </datePicker>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arA-sF-KaF">
+                                <rect key="frame" x="0.0" y="289" width="600" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Ktv-Md-Do1"/>
+                                </constraints>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Selected:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHO-EA-4mD">
+                                <rect key="frame" x="0.0" y="397" width="600" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rh7-Zk-h4d">
-                                <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <items>
                                     <navigationItem title="Exchange Request" id="8sJ-pi-jtn">
                                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="MKj-SU-OMt">
@@ -431,31 +449,13 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="WZA-Vb-Bef" customClass="I">
-                                <rect key="frame" x="0.0" y="72" width="600" height="216"/>
-                                <date key="date" timeIntervalSinceReferenceDate="481252159.44744402">
-                                    <!--2016-04-02 01:09:19 +0000-->
-                                </date>
-                            </datePicker>
-                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="arA-sF-KaF">
-                                <rect key="frame" x="0.0" y="297" width="600" height="100"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="100" id="Ktv-Md-Do1"/>
-                                </constraints>
-                            </pickerView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Selected:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fHO-EA-4mD">
-                                <rect key="frame" x="0.0" y="405" width="600" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="fHO-EA-4mD" firstAttribute="top" secondItem="arA-sF-KaF" secondAttribute="bottom" constant="8" symbolic="YES" id="5sQ-bX-xp5"/>
                             <constraint firstItem="WZA-Vb-Bef" firstAttribute="trailing" secondItem="arA-sF-KaF" secondAttribute="trailing" id="634-v9-u80"/>
                             <constraint firstItem="arA-sF-KaF" firstAttribute="leading" secondItem="WZA-Vb-Bef" secondAttribute="leading" id="7bJ-sa-SDe"/>
-                            <constraint firstItem="rh7-Zk-h4d" firstAttribute="top" secondItem="kWs-ar-fGZ" secondAttribute="top" constant="28" id="BvS-y2-ZfW"/>
+                            <constraint firstItem="rh7-Zk-h4d" firstAttribute="top" secondItem="kWs-ar-fGZ" secondAttribute="top" constant="20" id="BvS-y2-ZfW"/>
                             <constraint firstItem="WZA-Vb-Bef" firstAttribute="top" secondItem="rh7-Zk-h4d" secondAttribute="bottom" id="MlA-DG-lET"/>
                             <constraint firstItem="arA-sF-KaF" firstAttribute="top" secondItem="WZA-Vb-Bef" secondAttribute="bottom" constant="9" id="OIl-n7-ijb"/>
                             <constraint firstAttribute="trailing" secondItem="WZA-Vb-Bef" secondAttribute="trailing" id="XuK-db-pjn"/>
@@ -474,7 +474,59 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QSe-6X-hpq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1790" y="-153"/>
+            <point key="canvasLocation" x="1798" y="-591"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="HXQ-gh-kHe">
+            <objects>
+                <viewController id="Nai-Km-kL8" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ZUp-3K-y28"/>
+                        <viewControllerLayoutGuide type="bottom" id="QA6-NJ-fn1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Vdz-gO-sJs">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LbN-UG-Sfq">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <navigationItem title="Reschedule a Request" id="jtf-39-3Tq">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="05F-5O-s3a"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Done" id="9l3-WH-uKM"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="hya-7L-6n2">
+                                <rect key="frame" x="0.0" y="64" width="600" height="216"/>
+                                <date key="date" timeIntervalSinceReferenceDate="481667303.11089599">
+                                    <!--2016-04-06 20:28:23 +0000-->
+                                </date>
+                            </datePicker>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dOk-Bb-86q">
+                                <rect key="frame" x="0.0" y="288" width="600" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="QZt-Gq-Cfe"/>
+                                </constraints>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dOk-Bb-86q" firstAttribute="leading" secondItem="Vdz-gO-sJs" secondAttribute="leading" id="5AX-EF-hid"/>
+                            <constraint firstAttribute="trailing" secondItem="hya-7L-6n2" secondAttribute="trailing" id="63f-Wx-tc0"/>
+                            <constraint firstItem="hya-7L-6n2" firstAttribute="top" secondItem="LbN-UG-Sfq" secondAttribute="bottom" id="9Aq-3X-Sur"/>
+                            <constraint firstItem="hya-7L-6n2" firstAttribute="trailing" secondItem="LbN-UG-Sfq" secondAttribute="trailing" id="BXF-zx-UMz"/>
+                            <constraint firstItem="LbN-UG-Sfq" firstAttribute="top" secondItem="Vdz-gO-sJs" secondAttribute="top" constant="20" id="G1k-AX-27F"/>
+                            <constraint firstItem="dOk-Bb-86q" firstAttribute="top" secondItem="hya-7L-6n2" secondAttribute="bottom" constant="8" symbolic="YES" id="HtN-7O-iHm"/>
+                            <constraint firstItem="dOk-Bb-86q" firstAttribute="leading" secondItem="hya-7L-6n2" secondAttribute="leading" id="WvX-T6-Zfp"/>
+                            <constraint firstItem="dOk-Bb-86q" firstAttribute="trailing" secondItem="hya-7L-6n2" secondAttribute="trailing" id="nrF-We-12z"/>
+                            <constraint firstItem="hya-7L-6n2" firstAttribute="leading" secondItem="LbN-UG-Sfq" secondAttribute="leading" id="oNE-rZ-k0u"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uKk-9J-LT8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1798" y="67"/>
         </scene>
     </scenes>
     <resources>
