--- a/eXchange/Base.lproj/Main.storyboard
+++ b/eXchange/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iHA-ld-opb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iHA-ld-opb">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -185,7 +185,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5La-lO-Wlv">
-                                <rect key="frame" x="20" y="118" width="280" height="30"/>
+                                <rect key="frame" x="20" y="118" width="181" height="30"/>
                                 <state key="normal" title="Completed">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
@@ -194,18 +194,11 @@
                                     <action selector="historyButtonPressed:" destination="2gH-u9-gRa" eventType="touchUpInside" id="r4V-TW-WfF"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SeP-T5-CSw">
-                                <rect key="frame" x="308" y="118" width="272" height="30"/>
-                                <state key="normal" title="Unfinished">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="unfinishedButtonPressed:" destination="2gH-u9-gRa" eventType="touchUpInside" id="LLv-eV-CDV"/>
-                                </connections>
-                            </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yFO-JE-I60">
                                 <rect key="frame" x="20" y="8" width="560" height="110"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="110" id="bz2-GT-Lhu"/>
+                                </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="8fM-sw-1cL">
                                 <rect key="frame" x="0.0" y="148" width="600" height="403"/>
@@ -271,24 +264,47 @@
                                     <outlet property="delegate" destination="2gH-u9-gRa" id="V1m-sZ-Vt1"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jDv-YE-b4f">
+                                <rect key="frame" x="419" y="118" width="161" height="30"/>
+                                <state key="normal" title="Upcoming">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="upcomingButtonPressed:" destination="2gH-u9-gRa" eventType="touchUpInside" id="YAY-6P-4mf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SeP-T5-CSw">
+                                <rect key="frame" x="209" y="118" width="202" height="30"/>
+                                <state key="normal" title="Unfinished">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="unfinishedButtonPressed:" destination="2gH-u9-gRa" eventType="touchUpInside" id="LLv-eV-CDV"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8fM-sw-1cL" firstAttribute="leading" secondItem="MBx-0j-Xkq" secondAttribute="leading" id="2ki-Da-sN2"/>
-                            <constraint firstAttribute="bottom" secondItem="8fM-sw-1cL" secondAttribute="bottom" constant="49" id="2pb-4e-o78"/>
-                            <constraint firstItem="yFO-JE-I60" firstAttribute="trailing" secondItem="SeP-T5-CSw" secondAttribute="trailing" id="5W0-Qr-XHj"/>
-                            <constraint firstItem="SeP-T5-CSw" firstAttribute="leading" secondItem="5La-lO-Wlv" secondAttribute="trailing" constant="8" id="Flt-38-5UR"/>
-                            <constraint firstItem="yFO-JE-I60" firstAttribute="leading" secondItem="5La-lO-Wlv" secondAttribute="leading" id="H9z-RB-Znu"/>
-                            <constraint firstItem="SeP-T5-CSw" firstAttribute="height" secondItem="5La-lO-Wlv" secondAttribute="height" id="NAr-fe-dKX"/>
-                            <constraint firstItem="yFO-JE-I60" firstAttribute="top" secondItem="MBx-0j-Xkq" secondAttribute="top" constant="8" id="OPF-Vs-78e"/>
-                            <constraint firstItem="5La-lO-Wlv" firstAttribute="top" secondItem="MBx-0j-Xkq" secondAttribute="top" constant="118" id="RUI-g4-K4l"/>
-                            <constraint firstItem="SeP-T5-CSw" firstAttribute="top" secondItem="yFO-JE-I60" secondAttribute="bottom" id="SKq-lb-RQW"/>
-                            <constraint firstItem="5La-lO-Wlv" firstAttribute="top" secondItem="yFO-JE-I60" secondAttribute="bottom" id="i4z-6I-hcs"/>
-                            <constraint firstItem="5La-lO-Wlv" firstAttribute="leading" secondItem="MBx-0j-Xkq" secondAttribute="leadingMargin" id="vGy-oR-Ms9"/>
-                            <constraint firstItem="SeP-T5-CSw" firstAttribute="width" secondItem="5La-lO-Wlv" secondAttribute="width" constant="-8" id="vys-s4-gTP"/>
-                            <constraint firstItem="yFO-JE-I60" firstAttribute="centerX" secondItem="8fM-sw-1cL" secondAttribute="centerX" id="xC8-Lr-on9"/>
-                            <constraint firstItem="8fM-sw-1cL" firstAttribute="top" secondItem="5La-lO-Wlv" secondAttribute="bottom" id="xUY-dm-GFA"/>
-                            <constraint firstItem="SeP-T5-CSw" firstAttribute="trailing" secondItem="MBx-0j-Xkq" secondAttribute="trailingMargin" id="zTa-JP-asx"/>
+                            <constraint firstItem="5La-lO-Wlv" firstAttribute="top" secondItem="yFO-JE-I60" secondAttribute="bottom" id="1UB-mG-DY2"/>
+                            <constraint firstAttribute="trailing" secondItem="8fM-sw-1cL" secondAttribute="trailing" id="7Pw-lN-B7E"/>
+                            <constraint firstItem="8fM-sw-1cL" firstAttribute="top" secondItem="5La-lO-Wlv" secondAttribute="bottom" id="9hg-ad-fAg"/>
+                            <constraint firstItem="yFO-JE-I60" firstAttribute="top" secondItem="MBx-0j-Xkq" secondAttribute="topMargin" constant="8" id="F3x-pg-CmC"/>
+                            <constraint firstItem="jDv-YE-b4f" firstAttribute="leading" secondItem="SeP-T5-CSw" secondAttribute="trailing" constant="8" id="I5i-rI-bEi"/>
+                            <constraint firstItem="SeP-T5-CSw" firstAttribute="baseline" secondItem="jDv-YE-b4f" secondAttribute="baseline" id="Nvp-YA-465"/>
+                            <constraint firstItem="8fM-sw-1cL" firstAttribute="leading" secondItem="MBx-0j-Xkq" secondAttribute="leading" id="RW6-XI-W86"/>
+                            <constraint firstItem="yFO-JE-I60" firstAttribute="centerX" secondItem="8fM-sw-1cL" secondAttribute="centerX" id="VWp-70-ruV"/>
+                            <constraint firstItem="yFO-JE-I60" firstAttribute="leading" secondItem="5La-lO-Wlv" secondAttribute="leading" id="Y6d-l8-bVn"/>
+                            <constraint firstItem="yFO-JE-I60" firstAttribute="leading" secondItem="MBx-0j-Xkq" secondAttribute="leadingMargin" id="YUY-kR-mqm"/>
+                            <constraint firstItem="SeP-T5-CSw" firstAttribute="height" secondItem="5La-lO-Wlv" secondAttribute="height" id="bDk-bt-mQS"/>
+                            <constraint firstItem="jDv-YE-b4f" firstAttribute="height" secondItem="5La-lO-Wlv" secondAttribute="height" id="daI-ww-ka6"/>
+                            <constraint firstItem="SeP-T5-CSw" firstAttribute="width" secondItem="5La-lO-Wlv" secondAttribute="width" id="fQV-du-dNY"/>
+                            <constraint firstItem="SeP-T5-CSw" firstAttribute="leading" secondItem="5La-lO-Wlv" secondAttribute="trailing" constant="8" id="tCy-DB-nes"/>
+                            <constraint firstItem="yFO-JE-I60" firstAttribute="trailing" secondItem="jDv-YE-b4f" secondAttribute="trailing" id="tTD-RL-Vw1"/>
+                            <constraint firstItem="5La-lO-Wlv" firstAttribute="baseline" secondItem="SeP-T5-CSw" secondAttribute="baseline" id="uwb-Px-j5a"/>
+                            <constraint firstItem="8fM-sw-1cL" firstAttribute="bottom" secondItem="Dnx-RB-qUX" secondAttribute="top" id="v0f-Xe-BfH"/>
+                            <constraint firstItem="jDv-YE-b4f" firstAttribute="width" secondItem="5La-lO-Wlv" secondAttribute="width" id="x9n-55-T4N"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="User" image="user" id="r4a-ck-zBB"/>
@@ -297,6 +313,7 @@
                         <outlet property="historyButton" destination="5La-lO-Wlv" id="Ncg-f2-UAj"/>
                         <outlet property="tableView" destination="8fM-sw-1cL" id="Gmp-CB-5Fi"/>
                         <outlet property="unfinishedButton" destination="SeP-T5-CSw" id="ses-uc-1eI"/>
+                        <outlet property="upcomingButton" destination="jDv-YE-b4f" id="aTB-aV-cHX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5kw-MD-ujS" userLabel="First Responder" sceneMemberID="firstResponder"/>
